--- a/index.html
+++ b/index.html
@@ -82,11 +82,12 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Blog Entry #1</h5>
-          <p class="card-text">Author: </p>
-          <a href="#" class="btn btn-primary">Example text to fill in the space.....</a>
+          <h5 class="card-title">Card title</h5>
+          <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="card-link">Card link</a>
+          <a href="#" class="card-link">Another link</a>
         </div>
       </div>
     
