--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-</head>
+    <link rel="icon" type="image/x-icon" href="favicon.png">
+  </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">
+            <img src="logo.png" class="img-fluid" style="width: 100px; height: 100px;">
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -123,7 +126,7 @@
                     <div class="card-body">
                     <img src="pc-icon-25.png" class="img-thumbnail">
                     <h5 class="card-title">Intro to HTML</h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary">Author: Avaneesh</h6>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">Author: Author</h6>
                     <h6 class="card-subtitle mb-2 text-body-secondary-text">Date: 9-13-2023</h6>
                     <a href="#" class="card-link"></a>
                     <a href="#" class="card-link"></a>
