--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <div class="card-body">
                     <img src="pc-icon-25.png" class="img-thumbnail">
                     <h5 class="card-title">Intro to HTML</h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary">Author: Avaneesh</h6>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">Author: Author</h6>
                     <h6 class="card-subtitle mb-2 text-body-secondary-text">Date: 9-13-2023</h6>
                     <a href="#" class="card-link"></a>
                     <a href="#" class="card-link"></a>
@@ -154,7 +154,7 @@
                     <div class="card-body">
                     <img src="pc-icon-25.png" class="img-thumbnail">
                     <h5 class="card-title">Intro to HTML</h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary">Author: Avaneesh</h6>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">Author: Author</h6>
                     <h6 class="card-subtitle mb-2 text-body-secondary-text">Date: 9-13-2023</h6>
                     <a href="#" class="card-link"></a>
                     <a href="#" class="card-link"></a>
@@ -168,7 +168,7 @@
                     <div class="card-body">
                     <img src="pc-icon-25.png" class="img-thumbnail">
                     <h5 class="card-title">Intro to HTML</h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary">Author: Avaneesh</h6>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">Author: Author</h6>
                     <h6 class="card-subtitle mb-2 text-body-secondary-text">Date: 9-13-2023</h6>
                     <a href="#" class="card-link"></a>
                     <a href="#" class="card-link"></a>
