Added about.html File  and edited blog and index files

--- a/blog.html
+++ b/blog.html
@@ -43,18 +43,159 @@
           </div>
         </div>
       </nav>
-      
+
+      <h1 style="text-align: center;"> Blog Entries </h1>
+
+      <h6>
+        We make various blogs on different subjects of computer science. This list is ordered by the more recent blogs being at the top. 
+      </h6>
+
+      <div class="container">
+        <div class="row justify-content-center">  
+
+            <div class="col-auto col-md">
+              <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Category
+                </button>
+                <ul class="dropdown-menu">
+                  <li>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox">Two
+                        </label>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox">Two
+                        </label>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox">Two
+                        </label>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+
+            <div class="col-auto col-md">
+              <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Author
+                </button>
+                <ul class="dropdown-menu">
+                  <li>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox">Two
+                        </label>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox">Two
+                        </label>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox">Two
+                        </label>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="col-auto col-md">
+              <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown button
+                </button>
+                <ul class="dropdown-menu">
+                  <li>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox">Two
+                        </label>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox">Two
+                        </label>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox">Two
+                        </label>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="col-auto col-md">
+              <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown button
+                </button>
+                <ul class="dropdown-menu">
+                  <li>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox">Two
+                        </label>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox">Two
+                        </label>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox">Two
+                        </label>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+        
+        </div>
+      </div>
+
+      <br><br><hr><br><br>
+
       <div class="container">
         <div class="row justify-content-center">
-            <a href="index.html" class="flex flex-col group w-full">
-                <div class="col-auto col-md" on>
+
+            <a href="index.html" class="flex flex-col group w-full" style="color: black; text-decoration: none;">
+                <div class="col-auto col-md" style="text-align: center;">
                     <div class="card" style="width: 18rem;">
+                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-info">New!</span>
                         <div class="card-body">
-                        <img src="pc-icon-25.png" class="img-thumbnail">
+                        <img src="pc-icon-25.png" class="img-thumbnail" width="50%">
                         <h5 class="card-title">Intro to HTML</h5>
-                        <h6 class="card-subtitle mb-2 text-body-secondary">Author: Avaneesh</h6>
+                        <h6 class="card-subtitle mb-2 text-body-secondary">Author: Author</h6>
                         <h6 class="card-subtitle mb-2 text-body-secondary-text">Date: 9-13-2023</h6>
-                        <a href="#" class="card-link"></a>
+                        <a href="html.html" class="card-link" style="color: black; text-decoration: none;">Category: HTML/CS/JS</a>
                         <a href="#" class="card-link"></a>
                         </div>
                     </div>
