--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <br><br>
 
       <div style="background-color: lightblue; text-align: center;">
-        <h3 style="color: white;"><em><strong>"Coding Knowledge, Future Ready"</strong></em></h3>
+        <h3 style="color: white;"><em><strong>"Learn, Code, Transform"</strong></em></h3>
       </div>
 
       <br><br>
