--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
       <br><br>
 
-      <div style="background-color: lightblue; text-align: center;">
+      <div style="background-color: #4790FC; text-align: center;">
         <h3 style="color: white;"><em><strong>"Learn, Code, Transform"</strong></em></h3>
       </div>
 
