--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       <hr>
       <br><br><br>
 
-      <footer style="display: flex; justify-content: space-between; background-color: lightblue; padding-top: 10px;">
+      <footer style="display: flex; justify-content: space-between; background-color: #4790FC; color: white; padding-top: 10px;">
             <div style="text-align: left; width: 100%;">
               <p>&copy; LearnNCode 2023</p>
             </div>
