--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
             Our organization provides coding classes and workshops for kids of all ages and backgrounds, with a 
             focus on making coding accessible and fun. We also provide opportunities for older kids to volunteer 
             and teach coding to younger kids, helping to create a culture of community service and leadership. 
-            At Learn N Code, we believe that coding can be a powerful tool for creating positive change in society.
+            At Learn N Code, we believe that coding can be a powerful tool, transforming our society.
         </em></p>
       </div>
 
