--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
         <h2>Contributers</h2>
         <hr>
         <br>
-        <h6>Most of our team are from Dublin High School. We work to help kids anywhere to learn to code</h6>
+        <h6>Most of our team are from Dublin High School. We work to help kids anywhere to learn and code</h6>
       </div>
 
       <br><br>
