--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+        <div class="container-fluid" style="background-color: #E8F6FB;">
           <a class="navbar-brand" href="#">
             <img src="logo.png" class="img-fluid" style="width: 100px; height: 100px;">
           </a>
