--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
               <p>&copy; LearnNCode 2023</p>
             </div>
             <div style="text-align: right; width: 100%; margin-right: 10px;">
-              <a href="https://github.com/learnncode-ORG" target="_blank" style="color:black; text-decoration: none;">GitHub </a>
+              <a href="https://github.com/learnncode-ORG" target="_blank" style="color:white; text-decoration: none;">GitHub </a>
             </div>
       </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
